# managebot

./: .env  config.py  pyproject.toml  session_export.session  session_test.session  test.py
data/: env.json  message.json  user_data.json  user_status.json
src/managebot/: bot.py  message_loader.py  user_storage.py
src/managebot/handlers/: auto_cleaner.py  exportdata.py  kick.py  leave_come.py  link_guard.py  member_listeners.py  mute.py  start_menu.py  word_filter.py
src/managebot/utils/: exporter.py  menu.py  message_tools.py  permissions.py
